--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,14 @@
           />
         </a>
       </div>
+      <div class="nav__events--mark-container">
+        <a
+          href="#events"
+          class="nav__events--mark"
+        >
+          ПОДІЇ
+        </a>
+      </div>
     </header>
     <div class="nav__img"></div>
 
@@ -73,73 +81,107 @@
     </div>
 
     <aside
-      class="menu page__menu"
+      class="page__menu menu"
       id="menu"
     >
-      <div class="menu__nav">
-        <a href="#">
-          <img
-            src="./images/icons/ri-close-fill.svg"
-            alt="menu icon"
-            class="menu__close-icon"
-          />
-        </a>
-
-        <div class="menu__nav-section">
-          <a href="#">Галерея</a>
-          <a href="#">
-            Виставки та
-            <br />
-            події
-          </a>
-        </div>
-        <div class="menu__nav-section">
-          <a href="#">Про Нас</a>
-          <a href="#">Контакти</a>
-        </div>
-      </div>
-
-      <hr />
-      <div class="menu__info">
-        <div class="menu__info-title">Графік роботи</div>
-
-        <ul class="menu__info-list">
-          <li class="menu__info-list-item">
-            <strong>12:00 — 20:00</strong>
-            середа
-          </li>
-          <li class="menu__info-list-item">
-            <strong>12:00 — 20:00</strong>
-            четвер
-          </li>
-          <li class="menu__info-list-item">
-            <strong>12:00 — 20:00</strong>
-            п’ятниця
-          </li>
-          <li class="menu__info-list-item">
-            <strong>11:00 — 19:00</strong>
-            субота
-          </li>
-          <li class="menu__info-list-item">
-            <strong>11:00 — 19:00</strong>
-            неділя
-          </li>
-        </ul>
-
-        <div class="menu__info-footer">
-          <strong>Вихідні:</strong>
-          понеділок, вівторок
-          <br />
-          Каса припиняє роботу за 1 годину
-          <br />
-          до закриття музею
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a
+              href="#"
+              class="menu__icon icon icon--close"
+            ></a>
+            <ul class="menu__list">
+              <li>
+                <a
+                  href="#gallery"
+                  class="menu__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#subscription"
+                  class="menu__link"
+                >
+                  Про нас
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#current-events"
+                  class="menu__link"
+                >
+                  Виставки та
+                  <br />
+                  події
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#contacts"
+                  class="menu__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="menu__line"></div>
+          <div class="menu__bottom">
+            <div class="menu__schedule">
+              <p class="menu__text">Графік роботи</p>
+              <ul class="menu__schedule-list">
+                <li>
+                  <p class="menu__text">
+                    <span>12:00 — 20:00</span>
+                    середа
+                  </p>
+                </li>
+                <li>
+                  <p class="menu__text">
+                    <span>12:00 — 20:00</span>
+                    четвер
+                  </p>
+                </li>
+                <li>
+                  <p class="menu__text">
+                    <span>12:00 — 20:00</span>
+                    п’ятниця
+                  </p>
+                </li>
+                <li>
+                  <p class="menu__text">
+                    <span>11:00 — 19:00</span>
+                    субота
+                  </p>
+                </li>
+                <li>
+                  <p class="menu__text">
+                    <span>11:00 — 19:00</span>
+                    неділя
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <p class="menu__text menu__bottom-text">
+              <span>Вихідні:</span>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
         </div>
       </div>
     </aside>
 
     <main class="main">
-      <h2 class="main__title">Актуальні події</h2>
-      <div class="current-events">
+      <div
+        class="current-events"
+        id="events"
+      >
+        <h2 class="main__title">Актуальні події</h2>
         <div class="current-events-item">
           <div class="current-events-item-img">
             <img
@@ -209,7 +251,7 @@
         id="gallery"
       >
         <div class="container">
-          <h2 class="gallery__title section-title">Галерея</h2>
+          <h2 class="gallery__title">Галерея</h2>
 
           <div class="gallery__slider slider">
             <div class="slider__wrapper">
