add hover to imgs

--- a/src/index.html
+++ b/src/index.html
@@ -328,7 +328,7 @@
         </div>
       </section>
 
-      <div class="subscription">
+      <div class="subscription" id="subscription">
         <h4 class="subscription__title">Підписка</h4>
         <p class="subscription__subtitle">
           Бути в курсі всіх актуальних подій та останніх новин.
