--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
     />
     <title>NaMu</title>
     <link
+      rel="icon"
+      href="./images/icons/NA MU.svg"
+    />
+    <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
