--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,514 @@
 <!doctype html>
-<html lang="en">
+<html
+  class="page"
+  lang="en"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      type="image/svg"
+      href="../src/images/favicon.svg"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__top header__top--icon">
+          <a
+            href="#menu"
+            class="icon icon--burger"
+          ></a>
+          <div class="header__top-image">
+            <img
+              src="../src/images/NA MU.svg"
+              alt="NAMU logo"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="header__bottom">
+        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <button
+          type="submit"
+          class="header__button"
+        >
+          <div class="header__button-left">
+            <a
+              href="#events"
+              class="header__button--link"
+            >
+              квитки
+            </a>
+          </div>
+          <div class="header__button-right">
+            <img
+              src="../src/icons/arrow_right_icon.svg"
+              alt="arrow-right"
+              class="header__button--icon icon icon--arrow-right"
+            />
+          </div>
+        </button>
+
+        <a
+          href="#events"
+          class="header__events"
+        >
+          події
+        </a>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="menu__content">
+        <div class="menu__top">
+          <a
+            href="#"
+            class="icon icon--cross"
+          ></a>
+          <nav class="menu__nav nav">
+            <ul class="nav__list nav__list--1">
+              <li class="nav__item">
+                <a
+                  href="#galary"
+                  class="nav__link"
+                >
+                  <h4 class="nav__item__title">Галерея</h4>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#exhibitions"
+                  class="nav__link"
+                >
+                  <h4 class="nav__item__title">
+                    Виставки та
+                    <br />
+                    події
+                  </h4>
+                </a>
+              </li>
+            </ul>
+            <ul class="nav__list nav__list--2">
+              <li class="nav__item">
+                <a
+                  href="#subscribe"
+                  class="nav__link"
+                >
+                  <h4 class="nav__item__title">Про Нас</h4>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link"
+                >
+                  <h4 class="nav__item__title">Контакти</h4>
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <div class="menu__line"></div>
+        </div>
+
+        <div class="menu__line--horizontal"></div>
+
+        <div class="menu__bottom">
+          <div class="menu__schedule schedule">
+            <h5 class="menu__title">Графік роботи</h5>
+            <div class="schedule__wrapper">
+              <ul class="schedule__week">
+                <li class="schedule__time">
+                  12:00 — 20:00
+                  <span class="schedule__day">середа</span>
+                </li>
+                <li class="schedule__time">
+                  12:00 — 20:00
+                  <span class="schedule__day">четвер</span>
+                </li>
+                <li class="schedule__time">
+                  12:00 — 20:00
+                  <span class="schedule__day">п’ятниця</span>
+                </li>
+                <li class="schedule__time">
+                  11:00 — 19:00
+                  <span class="schedule__day">субота</span>
+                </li>
+                <li class="schedule__time">
+                  11:00 — 19:00
+                  <span class="schedule__day">неділя</span>
+                </li>
+              </ul>
+              <div class="schedule__day-off">
+                <span class="schedule__day-off--bold">Вихідні:</span>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до
+                <br />
+                закриття музею
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <section
+          class="exhibitions"
+          id="exhibitions"
+        >
+          <h2 class="exhibitions__title">Актуальні події</h2>
+          <div class="exhibitions__content">
+            <article class="exhibition">
+              <a
+                href="#"
+                class="exhibition__link exhibition__link--1"
+              ></a>
+              <div class="exhibition__container">
+                <div class="exhibition__schedule">
+                  <h5 class="exhibition__type">ВИСТАВКА</h5>
+                  <h5 class="exhibition__dates">26.08-29.11.2019</h5>
+                </div>
+                <div class="exhibition__wrapper">
+                  <h3 class="exhibition__title">Йду і повертаюсь</h3>
+                  <div class="exhibition__icon icon icon--square"></div>
+                </div>
+                <h4 class="exhibition__description">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </h4>
+              </div>
+            </article>
+            <article class="exhibition">
+              <a
+                href="#"
+                class="exhibition__link exhibition__link--2"
+              ></a>
+              <div class="exhibition__container">
+                <div class="exhibition__schedule">
+                  <h5 class="exhibition__type">ВИСТАВКА</h5>
+                  <h5 class="exhibition__dates">26.08-29.11.2019</h5>
+                </div>
+                <div class="exhibition__wrapper">
+                  <h3 class="exhibition__title">І спогади і мрії</h3>
+                  <div class="exhibition__icon icon icon--square"></div>
+                </div>
+                <h4 class="exhibition__description">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </h4>
+              </div>
+            </article>
+          </div>
+        </section>
+
+        <section
+          class="events"
+          id="events"
+        >
+          <article class="event">
+            <div class="event__image"></div>
+            <div class="event__content">
+              <div class="event__schedule">
+                <h5 class="event__type">ЛЕКЦІЯ</h5>
+                <h5 class="event__dates">26/08/2019 - 11:00</h5>
+              </div>
+              <h3 class="event__title">Від класицизму до романтизму</h3>
+            </div>
+          </article>
+        </section>
+
+        <section
+          class="galary"
+          id="galary"
+        >
+          <h2 class="galary__title">Галерея</h2>
+          <div class="galary__collection">
+            <img
+              src="../src/images/Ukrainian-woman-in-national-clothe_mobile.svg"
+              alt="Ukrainian woman in national clothes"
+              class="galary__image galary__image--1"
+              id="image-1"
+            />
+            <img
+              src="../src/images/Goose_tablet.svg"
+              alt="Goose"
+              class="galary__image galary__image--2"
+              id="image-2"
+            />
+            <img
+              src="../src/images/Ukrainian-village_desktop.svg"
+              alt="Ukrainian village"
+              class="galary__image galary__image--3"
+              id="image-3"
+            />
+            <img
+              src="../src/images/Girl-on-the-banch_desktop.svg"
+              alt="Girl on the bench"
+              class="galary__image galary__image--4"
+              id="image-4"
+            />
+            <img
+              src="../src/images/Sea waves_desktop.svg"
+              alt="Sea waves"
+              class="galary__image galary__image--5"
+              id="image-5"
+            />
+          </div>
+          <div class="galary__scroll">
+            <div class="galary__scroll--icon">
+              <a
+                href="#image-1"
+                class="icon icon--scroll active"
+              ></a>
+              <a
+                href="#image-2"
+                class="icon icon--scroll"
+              ></a>
+              <a
+                href="#image-3"
+                class="icon icon--scroll"
+              ></a>
+              <a
+                href="#image-5"
+                class="icon icon--scroll"
+              ></a>
+            </div>
+          </div>
+        </section>
+
+        <section
+          class="subscribe"
+          id="subscribe"
+        >
+          <div class="subscribe__content">
+            <h2 class="subscribe__title">Підписка</h2>
+            <p class="subscribe__info">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              action="get"
+              class="subscribe__form"
+            >
+              <div class="subscribe__wrapper">
+                <input
+                  type="email"
+                  name="email"
+                  class="subscribe__input"
+                  required
+                  placeholder="E-mail"
+                />
+                <button
+                  type="submit"
+                  class="subscribe__button"
+                >
+                  <div
+                    class="subscribe__button--icon icon icon--arrow-right-black"
+                  ></div>
+                </button>
+              </div>
+            </form>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__block-1">
+        <a
+          href="#"
+          class="footer__link"
+        >
+          <img
+            src="../src/images/NA MU.svg"
+            alt="NAMU logo"
+            class="footer__logo"
+          />
+        </a>
+        <div class="footer__media">
+          <a
+            href="https://www.facebook.com"
+            class="footer__facebook icon icon--facebook"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.instagram.com"
+            class="footer__instagram icon icon--instagram"
+            target="_blank"
+          ></a>
+        </div>
+      </div>
+
+      <article class="footer__schedule schedule">
+        <div class="footer__schedule schedule">
+          <h5 class="footer__title">Графік роботи</h5>
+          <div class="schedule__wrapper schedule__wrapper--footer">
+            <ul class="schedule__week">
+              <li class="schedule__time">
+                12:00 — 20:00
+                <span class="schedule__day">середа</span>
+              </li>
+              <li class="schedule__time">
+                12:00 — 20:00
+                <span class="schedule__day">четвер</span>
+              </li>
+              <li class="schedule__time">
+                12:00 — 20:00
+                <span class="schedule__day">п’ятниця</span>
+              </li>
+              <li class="schedule__time">
+                11:00 — 19:00
+                <span class="schedule__day">субота</span>
+              </li>
+              <li class="schedule__time">
+                11:00 — 19:00
+                <span class="schedule__day">неділя</span>
+              </li>
+            </ul>
+            <div class="schedule__day-off">
+              <span class="schedule__day-off--bold">Вихідні:</span>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до
+              <br />
+              закриття музею
+            </div>
+          </div>
+        </div>
+      </article>
+
+      <article
+        class="footer__contacts contacts"
+        id="contacts"
+      >
+        <h3 class="footer__title">Контакти:</h3>
+        <a
+          href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.449395,30.5282031,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D"
+          class="contacts__address"
+          target="_blank"
+        >
+          вул. М. Грушевського, 6;
+          <br />
+          Київ, 01001
+        </a>
+        <div class="contacts__details">
+          тел.&nbsp
+          <a
+            href="tel:+38(044)278-13-57"
+            class="contacts__phone"
+          >
+            +38(044)278-13-57,&nbsp
+          </a>
+        </div>
+        <div class="contacts__details">
+          факс &nbsp
+          <a
+            href="fax:+38(044)278-54-74"
+            class="contacts__phone"
+          >
+            +38(044)
+            <br />
+            278-54-74
+          </a>
+        </div>
+        <div class="contacts__details">
+          e-mail:&nbsp
+          <a
+            href="mailto:info@namu.kiev.ua"
+            class="contacts__email"
+          >
+            info@namu.kiev.ua
+          </a>
+        </div>
+      </article>
+
+      <div class="footer__line footer__line--horizontal"></div>
+      <div class="footer__line footer__line--vertical"></div>
+
+      <div class="footer__nav footer__nav--1">
+        <ul class="footer__nav-list">
+          <li class="footer__nav-item">
+            <a
+              href="#galary"
+              class="footer__nav-link"
+            >
+              <h5 class="footer__nav-item__title">Галерея</h5>
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a
+              href="#exhibitions"
+              class="footer__nav-link"
+            >
+              <h5 class="footer__nav-item__title">Виставки та події</h5>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__nav footer__nav--2">
+        <ul class="footer__nav-list">
+          <li class="footer__nav-item">
+            <a
+              href="#subscribe"
+              class="footer__nav-link"
+            >
+              <h5 class="footer__nav-item__title">Про Нас</h5>
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a
+              href="#contacts"
+              class="footer__nav-link"
+            >
+              <h5 class="nav__item__title">Контакти</h5>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <article class="footer__copyright">
+        <div class="footer__privacy">
+          <p class="footer__privact-info">Designed by Zhyriada Marina</p>
+          <p class="footer__privact-info">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+        <a
+          href="#"
+          class="footer__scroll-up icon"
+        ></a>
+      </article>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
