--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,187 @@
+<!-- #region head -->
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!-- #endregion -->
+
+  <body class="page__body">
+    <!-- #region header -->
+    <header class="header">
+      <div class="container">
+        <div class="header__top">
+          <a
+            href="#menu"
+            class="header__icon icon icon--burger"
+          ></a>
+          <a
+            href="#"
+            class="header__logo"
+          >
+            NA
+            <br />
+            MU
+          </a>
+        </div>
+        <div class="header__bottom">
+          <h1 class="header__title">
+            Художній
+            <br />
+            музей
+          </h1>
+          <div class="header__button button">
+            <div class="button__text">Квитки</div>
+            <a
+              href="#"
+              class="button__link icon icon--link"
+            ></a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- #endregion -->
+    <!-- #region menu -->
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__header">
+          <a
+            href="#"
+            class="menu__icon icon icon--close"
+          ></a>
+          <div class="menu__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#subscribe"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#events"
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="menu__schedule">
+          <p class="menu__schedule--title">Графік роботи</p>
+          <p>
+            <span class="menu__schedule--bold">12:00 — 20:00</span>
+
+            середа
+          </p>
+          <p>
+            <span class="menu__schedule--bold">12:00 — 20:00</span>
+            четвер
+          </p>
+          <p>
+            <span class="menu__schedule--bold">12:00 — 20:00</span>
+            п’ятниця
+          </p>
+          <p>
+            <span class="menu__schedule--bold">11:00 — 19:00</span>
+            субота
+          </p>
+          <p>
+            <span class="menu__schedule--bold">11:00 — 19:00</span>
+            неділя
+          </p>
+          <p class="menu__schedule--summary">
+            <span class="menu__schedule--bold">Вихідні:</span>
+            понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
+            музею
+          </p>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion -->
+    <!-- #region events -->
+    <main class="main">
+      <div class="container">
+        <section
+          class="events"
+          id="events"
+        >
+          <h2>Актуальні події</h2>
+        </section>
+        <!-- #endregion -->
+        <!-- #region gallery -->
+        <section
+          class="gallery"
+          id="gallery"
+        >
+          <h2>Галерея</h2>
+        </section>
+        <!-- #endregion -->
+        <!-- #region subscribe -->
+        <section class="subscribe"><h2>Підписка</h2></section>
+      </div>
+    </main>
+    <!-- #endregion -->
+    <!-- #region footer -->
+    <footer
+      class="footer"
+      id="contacts"
+    >
+      <div class="container">Contacts</div>
+    </footer>
+    <!-- #endregion -->
     <script src="scripts/main.js"></script>
   </body>
 </html>
