added header for all devices

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -8,12 +11,57 @@
     />
     <title>Title</title>
     <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header page__header">
+      <div class="header__container">
+        <a
+          href="#"
+          class="icon icon--dropdown"
+        ></a>
+        <div class="header__background-container">
+          <a
+            href="#"
+            class="header__logo-link"
+          >
+            <img
+              src="./images/logo.png"
+              alt="NAMU Logo"
+              class="header__logo-image"
+            />
+          </a>
+          <div class="header__background"></div>
+        </div>
+        <h1 class="header__title">Художній музей</h1>
+        <div class="header__tickets-button-wrapper">
+          <a
+            href="#"
+            class="header__tickets-button"
+          >
+            <span class="header__tickets-button-text">Квитки</span>
+          </a>
+          <a class="header__events-link">
+            <div class="header__events-link--line"></div>
+            <p class="header__events-link--text">Події</p>
+          </a>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
