added dropdown menu

--- a/index.html
+++ b/index.html
@@ -20,21 +20,118 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <script
+      src="./app.js"
+      defer
+    ></script>
   </head>
   <body class="page__body">
     <header class="header page__header">
-      <div class="header__container">
+      <div
+        id="backdrop"
+        class="backdrop"
+      ></div>
+      <div class="header__dropdown">
         <a
           href="#"
-          class="icon icon--dropdown"
+          class="icon icon--dropdown-close"
         ></a>
+        <ul class="header__dropdown-nav">
+          <li class="header__dropdown-nav-link-group">
+            <ul class="header__dropdown-nav-group">
+              <li class="header__dropdown-nav-item">
+                <a
+                  href="#"
+                  class="header__dropdown-nav-link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="header__dropdown-nav-item">
+                <a
+                  href="#"
+                  class="header__dropdown-nav-link"
+                >
+                  Виставки та
+                  <br />
+                  події
+                </a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="header__dropdown-nav-link-group">
+            <ul class="header__dropdown-nav-group">
+              <li class="header__dropdown-nav-item">
+                <a
+                  href="#"
+                  class="header__dropdown-nav-link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="header__dropdown-nav-item">
+                <a
+                  href="#"
+                  class="header__dropdown-nav-link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+
+        <hr class="header__dropdown-divider" />
+
+        <section class="header__dropdown-schedule">
+          <p class="header__dropdown-schedule-title">Графік роботи</p>
+          <div class="header__dropdown-schedule-wrapper">
+            <ul class="header__dropdown-schedule-list">
+              <li class="header__dropdown-schedule-item">
+                <strong>12:00 — 20:00</strong>
+                середа
+              </li>
+              <li class="header__dropdown-schedule-item">
+                <strong>12:00 — 20:00</strong>
+                четвер
+              </li>
+              <li class="header__dropdown-schedule-item">
+                <strong>12:00 — 20:00</strong>
+                п’ятниця
+              </li>
+              <li class="header__dropdown-schedule-item">
+                <strong>11:00 — 19:00</strong>
+                субота
+              </li>
+              <li class="header__dropdown-schedule-item">
+                <strong>11:00 — 19:00</strong>
+                неділя
+              </li>
+            </ul>
+            <div class="header__dropdown-schedule-details">
+              <p class="header__dropdown-schedule-weekends">
+                <strong>Вихідні:</strong>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </section>
+      </div>
+      <a
+        href="#"
+        class="icon icon--dropdown-open"
+      ></a>
+      <div class="header__container">
         <div class="header__background-container">
           <a
             href="#"
