--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,358 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>N A M U</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="shortcut icon"
+      href="/src/images/favicon.svg"
+      type="image/x-icon"
+    />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <div class="overlay"></div>
+    <header class="header">
+      <div class="menu">
+        <nav class="nav">
+          <div class="menu__close"></div>
+          <ul>
+            <li>
+              <a
+                class="menu__link"
+                href="#gallery"
+              >
+                Галерея
+              </a>
+            </li>
+            <li>
+              <a
+                class="menu__link"
+                href="#form"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li>
+              <a
+                class="menu__link"
+                href="#events"
+              >
+                Виставки та події
+              </a>
+            </li>
+            <li>
+              <a
+                class="menu__link"
+                href="#footer"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="menu__schedule">
+          <span>Графік роботи</span>
+          <ul>
+            <li>
+              <span>12:00 — 20:00</span>
+              середа
+            </li>
+
+            <li>
+              <span>12:00 — 20:00</span>
+              четвер
+            </li>
+
+            <li>
+              <span>12:00 — 20:00</span>
+              п'ятниця
+            </li>
+
+            <li>
+              <span>11:00 — 19:00</span>
+              субота
+            </li>
+
+            <li>
+              <span>11:00 — 19:00</span>
+              неділя
+            </li>
+          </ul>
+          <p class="menu__schedule_info">
+            <span>Вихідні</span>
+            : понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+      <div class="header__menu">
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g clip-path="url(#clip0_320_168)">
+            <path
+              d="M3 18H21V16H3V18ZM3 13H21V11H3V13ZM3 6V8H21V6H3Z"
+              fill="#0F0E08"
+            />
+          </g>
+          <defs>
+            <clippath id="clip0_320_168">
+              <rect
+                width="24"
+                height="24"
+                fill="white"
+              />
+            </clippath>
+          </defs>
+        </svg>
+      </div>
+      <aside class="header__intro">
+        <a
+          class="logo header__logo"
+          href="#"
+        >
+          NA MU
+        </a>
+      </aside>
+      <div class="header__interact">
+        <h1>ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a
+          href="#"
+          class="btn"
+        >
+          КВИТКИ
+        </a>
+      </div>
+    </header>
+    <section
+      class="events"
+      id="events"
+    >
+      <h2>Актуальні події</h2>
+      <div class="events__block">
+        <picture class="events__img">
+          <source
+            media="(min-width: 768px)"
+            srcset="/src/images/events_1(768px).png"
+          />
+          <img
+            src="/src/images/events_1.png"
+            alt="event"
+          />
+        </picture>
+        <div class="events__content">
+          <div class="events__info">
+            <span class="events__type">ВИСТАВКА</span>
+            <span class="events__date">26.08-29.11.2019</span>
+          </div>
+          <h3 class="events__heading">Йду і повертаюсь</h3>
+          <p class="events__description">
+            Національний Художній Музей України презентує унікальну частину
+            колекції Градобанку - українське мистецтво другої половини 1980-1995
+            років.
+          </p>
+        </div>
+      </div>
+      <div class="events__block">
+        <picture class="events__img">
+          <source
+            media="(min-width: 768px)"
+            srcset="/src/images/events_2(768px).png"
+          />
+          <img
+            src="/src/images/events_2.png"
+            alt="event"
+          />
+        </picture>
+        <div class="events__content">
+          <div class="events__info">
+            <span class="events__type">ВИСТАВКА</span>
+            <span class="events__date">26.08-29.11.2019</span>
+          </div>
+          <h3 class="events__heading">І спогади і мрії</h3>
+          <p class="events__description">
+            Національний художній музей України до 100 річчя від дня народження
+            видатної української художниці Тетяни Яблонської відкриває
+            ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </div>
+      </div>
+      <div class="events__block events__lecture">
+        <picture class="events__img">
+          <source
+            media="(min-width: 768px)"
+            srcset="/src/images/events_3(768px).png"
+          />
+          <img
+            src="/src/images/events_3.png"
+            alt="event"
+          />
+        </picture>
+        <div class="events__content">
+          <div class="events__info">
+            <span class="events__type">ЛЕКЦІЯ</span>
+            <span class="events__date">26/08/2019 - 11:00</span>
+          </div>
+          <h3 class="events__heading">Від класицизму до романтизму</h3>
+        </div>
+      </div>
+    </section>
+    <section
+      class="gallery"
+      id="gallery"
+    >
+      <h2>Галерея</h2>
+      <div class="gallery__content">
+        <div class="gallery__inner">
+          <img
+            src="/src/images/gallery.png"
+            alt="#"
+          />
+          <img
+            src="/src/images/gallery1.png"
+            alt="#"
+          />
+          <img
+            src="/src/images/gallery2.png"
+            alt="#"
+          />
+          <img
+            src="/src/images/gallery3.png"
+            alt="#"
+          />
+        </div>
+      </div>
+      <div class="pagination">
+        <div class="pagination__dot pagination__active"></div>
+        <div class="pagination__dot"></div>
+        <div class="pagination__dot"></div>
+        <div class="pagination__dot"></div>
+      </div>
+    </section>
+    <form
+      action="none"
+      class="subscription"
+      id="form"
+    >
+      <div class="subscription__content">
+        <h2 class="subscription__heading">Підписка</h2>
+        <p class="subscription__info">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <div class="subscription__submit">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            required
+            placeholder="E-mail"
+          />
+          <button type="submit"></button>
+        </div>
+      </div>
+    </form>
+    <footer
+      class="footer"
+      id="footer"
+    >
+      <div class="footer__heading">
+        <a
+          href="#"
+          class="logo footer__logo"
+        >
+          NA MU
+        </a>
+        <div class="socials">
+          <a
+            href="https://www.facebook.com/"
+            class="facebook"
+            target="_blank"
+          ></a>
+          <a
+            href="https://www.instagram.com/"
+            class="instagram"
+            target="_blank"
+          ></a>
+        </div>
+      </div>
+      <div class="footer__contents">
+        <div class="footer__schedule">
+          <span>Графік роботи</span>
+          <ul>
+            <li>
+              12:00 — 20:00
+              <span>середа</span>
+            </li>
+            <li>
+              12:00 — 20:00
+              <span>четвер</span>
+            </li>
+            <li>
+              12:00 — 20:00
+              <span>п'ятниця</span>
+            </li>
+            <li>
+              11:00 — 19:00
+              <span>субота</span>
+            </li>
+            <li>
+              11:00 — 19:00
+              <span>неділя</span>
+            </li>
+            <p class="footer__schedule_info">
+              <span>Вихідні:</span>
+              понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
+              музею
+            </p>
+          </ul>
+        </div>
+        <div class="footer__contacts">
+          <span>Контакти:</span>
+          <ul>
+            <li>
+              <a
+                href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+Ukraine,+02000/@50.449395,30.5282138,907m/data=!3m2!1e3!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu&g_ep=EgoyMDI1MDEyMi4wIKXMDSoASAFQAw%3D%3D"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+            </li>
+            <li>
+              <a href="tel:+380442781357">тел. +38 (044) 278-13-57</a>
+            </li>
+            <li>
+              <a href="tel:+380442787454">факс +38 (044) 278-74-54</a>
+            </li>
+            <li>
+              <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+            </li>
+          </ul>
+        </div>
+        <a
+          href="#"
+          class="footer__anchor"
+        ></a>
+      </div>
+      <nav class="nav">
+        <ul>
+          <li><a href="#gallery">Галерея</a></li>
+          <li><a href="#form">Про Нас</a></li>
+          <li><a href="#events">Виставки та події</a></li>
+          <li><a href="#footer">Контакти</a></li>
+        </ul>
+      </nav>
+      <div class="footer__copyright">
+        <span>Copyright © 2019. All Rights Reserved.</span>
+        <span>Designed by random designer</span>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
