minor improvement (header link changed)

--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
       <div class="header__interact">
         <h1>ХУДОЖНІЙ МУЗЕЙ</h1>
         <a
-          href="#"
+          href="#form"
           class="btn"
         >
           КВИТКИ
