--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/style.scss"
     />
     <script
       src="./app.js"
@@ -34,131 +34,209 @@
   </head>
   <body class="page__body">
     <header class="header page__header">
-      <div
-        id="backdrop"
-        class="backdrop"
-      ></div>
-      <div class="header__dropdown">
-        <a
-          href="#"
-          class="icon icon--dropdown-close"
-        ></a>
-        <ul class="header__dropdown-nav">
-          <li class="header__dropdown-nav-link-group">
-            <ul class="header__dropdown-nav-group">
-              <li class="header__dropdown-nav-item">
-                <a
-                  href="#"
-                  class="header__dropdown-nav-link"
-                >
-                  Галерея
-                </a>
-              </li>
-              <li class="header__dropdown-nav-item">
-                <a
-                  href="#"
-                  class="header__dropdown-nav-link"
-                >
-                  Виставки та
+      <div class="header__wrapper">
+        <div
+          id="backdrop"
+          class="backdrop"
+        ></div>
+        <div
+          id="dropdown"
+          class="header__dropdown header__dropdown--non-visible"
+        >
+          <a
+            href="#"
+            class="icon icon--dropdown-close"
+          ></a>
+          <ul class="header__dropdown-nav">
+            <li class="header__dropdown-nav-link-group">
+              <ul class="header__dropdown-nav-group">
+                <li class="header__dropdown-nav-item">
+                  <a
+                    href="#"
+                    class="header__dropdown-nav-link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+                <li class="header__dropdown-nav-item">
+                  <a
+                    href="#events"
+                    class="header__dropdown-nav-link"
+                  >
+                    Виставки та
+                    <br />
+                    події
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="header__dropdown-nav-link-group">
+              <ul class="header__dropdown-nav-group">
+                <li class="header__dropdown-nav-item">
+                  <a
+                    href="#"
+                    class="header__dropdown-nav-link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+                <li class="header__dropdown-nav-item">
+                  <a
+                    href="#"
+                    class="header__dropdown-nav-link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <hr class="header__dropdown-divider" />
+          <section class="header__dropdown-schedule">
+            <p class="header__dropdown-schedule-title">Графік роботи</p>
+            <div class="header__dropdown-schedule-wrapper">
+              <ul class="header__dropdown-schedule-list">
+                <li class="header__dropdown-schedule-item">
+                  <strong>12:00 — 20:00</strong>
+                  середа
+                </li>
+                <li class="header__dropdown-schedule-item">
+                  <strong>12:00 — 20:00</strong>
+                  четвер
+                </li>
+                <li class="header__dropdown-schedule-item">
+                  <strong>12:00 — 20:00</strong>
+                  п’ятниця
+                </li>
+                <li class="header__dropdown-schedule-item">
+                  <strong>11:00 — 19:00</strong>
+                  субота
+                </li>
+                <li class="header__dropdown-schedule-item">
+                  <strong>11:00 — 19:00</strong>
+                  неділя
+                </li>
+              </ul>
+              <div class="header__dropdown-schedule-details">
+                <p class="header__dropdown-schedule-weekends">
+                  <strong>Вихідні:</strong>
+                  понеділок, вівторок
                   <br />
-                  події
-                </a>
-              </li>
-            </ul>
-          </li>
-
-          <li class="header__dropdown-nav-link-group">
-            <ul class="header__dropdown-nav-group">
-              <li class="header__dropdown-nav-item">
-                <a
-                  href="#"
-                  class="header__dropdown-nav-link"
-                >
-                  Про Нас
-                </a>
-              </li>
-              <li class="header__dropdown-nav-item">
-                <a
-                  href="#"
-                  class="header__dropdown-nav-link"
-                >
-                  Контакти
-                </a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-
-        <hr class="header__dropdown-divider" />
-
-        <section class="header__dropdown-schedule">
-          <p class="header__dropdown-schedule-title">Графік роботи</p>
-          <div class="header__dropdown-schedule-wrapper">
-            <ul class="header__dropdown-schedule-list">
-              <li class="header__dropdown-schedule-item">
-                <strong>12:00 — 20:00</strong>
-                середа
-              </li>
-              <li class="header__dropdown-schedule-item">
-                <strong>12:00 — 20:00</strong>
-                четвер
-              </li>
-              <li class="header__dropdown-schedule-item">
-                <strong>12:00 — 20:00</strong>
-                п’ятниця
-              </li>
-              <li class="header__dropdown-schedule-item">
-                <strong>11:00 — 19:00</strong>
-                субота
-              </li>
-              <li class="header__dropdown-schedule-item">
-                <strong>11:00 — 19:00</strong>
-                неділя
-              </li>
-            </ul>
-            <div class="header__dropdown-schedule-details">
-              <p class="header__dropdown-schedule-weekends">
-                <strong>Вихідні:</strong>
-                понеділок, вівторок
-                <br />
-                Каса припиняє роботу за 1 годину до закриття музею
-              </p>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
             </div>
-          </div>
-        </section>
-      </div>
-      <a
-        href="#"
-        class="icon icon--dropdown-open"
-      ></a>
-      <div class="header__container">
-        <div class="header__background-container">
-          <a
-            href="#"
-            class="header__logo-link"
-          >
-            <img
-              src="./images/logo.png"
-              alt="NAMU Logo"
-              class="header__logo-image"
-            />
-          </a>
-          <div class="header__background"></div>
+          </section>
         </div>
-        <h1 class="header__title">Художній музей</h1>
-        <div class="header__tickets-button-wrapper">
-          <a
-            href="#"
-            class="header__tickets-button"
-          >
-            <span class="header__tickets-button-text">Квитки</span>
-          </a>
-          <a class="header__events-link">
-            <div class="header__events-link--line"></div>
-            <p class="header__events-link--text">Події</p>
-          </a>
+        <a
+          href="#dropdown"
+          class="icon icon--dropdown-open"
+        ></a>
+        <div class="header__container">
+          <div class="header__background-container">
+            <a
+              href="#"
+              class="header__logo-link"
+            >
+              <img
+                src="./images/logo.png"
+                alt="NAMU Logo"
+                class="header__logo-image"
+              />
+            </a>
+            <div class="header__background"></div>
+          </div>
+          <h1 class="header__title">Художній музей</h1>
+          <div class="header__tickets-button-wrapper">
+            <a
+              href="#"
+              class="header__tickets-button"
+            >
+              <span class="header__tickets-button-text">Квитки</span>
+            </a>
+            <a
+              class="header__events-link"
+              href="#events"
+            >
+              <div class="header__events-link--line"></div>
+              <p class="header__events-link--text">Події</p>
+            </a>
+          </div>
         </div>
       </div>
     </header>
+
+    <main class="main">
+      <section
+        id="events"
+        class="events"
+      >
+        <h2 class="section-title">Актуальні події</h2>
+        <article class="exhibition">
+          <a
+            href="#"
+            class="exhibition__photo exhibition__photo--1"
+          ></a>
+          <div class="exhibition__content">
+            <div class="exhibition__label">
+              <p class="exhibition__text">Виставка</p>
+              <p class="exhibition__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="exhibition__name">Йду і повертаюсь</h3>
+            <p class="exhibition__description">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </p>
+          </div>
+        </article>
+
+        <article class="exhibition">
+          <a
+            href="#"
+            class="exhibition__photo exhibition__photo--2"
+          ></a>
+          <div class="exhibition__content">
+            <div class="exhibition__label">
+              <p class="exhibition__text">Виставка</p>
+              <p class="exhibition__date">26.08-29.11.2019</p>
+            </div>
+            <h3 class="exhibition__name">І спогади і мрії</h3>
+            <p class="exhibition__description">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <section
+        id="lection"
+        class="lection main__lection"
+      >
+        <div class="lection__photo"></div>
+        <article class="lection__block">
+          <div class="lection__content">
+            <div class="lection__label">
+              <p class="lection__text">Лекція</p>
+              <p class="lection__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="lection__name">
+              Від класицизму до
+              <br />
+              романтизму
+            </h3>
+          </div>
+        </article>
+      </section>
+
+      <section
+        id="gallery"
+        class="gallery"
+      >
+        <h2 class="section-title">Галерея</h2>
+      </section>
+    </main>
   </body>
 </html>
