finished implementing layout for all devices

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <ul class="header__dropdown-nav-group">
                 <li class="header__dropdown-nav-item">
                   <a
-                    href="#"
+                    href="#footer"
                     class="header__dropdown-nav-link"
                   >
                     Про Нас
@@ -82,7 +82,7 @@
                 </li>
                 <li class="header__dropdown-nav-item">
                   <a
-                    href="#"
+                    href="#contacts"
                     class="header__dropdown-nav-link"
                   >
                     Контакти
@@ -301,5 +301,173 @@
         </article>
       </section>
     </main>
+
+    <footer
+      id="footer"
+      class="footer"
+    >
+      <div class="footer__logo-block">
+        <a
+          href="#"
+          class="footer__logo-site"
+        >
+          <img
+            src="./images/logo-2x.png"
+            alt="Site logo"
+            class="footer__logo-site-image"
+          />
+        </a>
+        <div class="footer__logo-block-socials">
+          <a
+            href="#"
+            class="footer__logo-fb"
+          >
+            <img
+              src="./images/fb-logo-2x.png"
+              alt="Facebook logo"
+              class="footer__logo-fb-image"
+            />
+          </a>
+          <a
+            href="#"
+            class="footer__logo-insta"
+          >
+            <img
+              src="./images/insta-logo-2x.png"
+              alt="Instagram logo"
+              class="footer__logo-insta-image"
+            />
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__schedule">
+        <p class="footer__schedule-title">Графік роботи</p>
+        <ul class="footer__schedule-list">
+          <li class="footer__schedule-item">
+            <strong>12:00 — 20:00</strong>
+            середа
+          </li>
+          <li class="footer__schedule-item">
+            <strong>12:00 — 20:00</strong>
+            четвер
+          </li>
+          <li class="footer__schedule-item">
+            <strong>12:00 — 20:00</strong>
+            п’ятниця
+          </li>
+          <li class="footer__schedule-item">
+            <strong>11:00 — 19:00</strong>
+            субота
+          </li>
+          <li class="footer__schedule-item">
+            <strong>11:00 — 19:00</strong>
+            неділя
+          </li>
+          <li class="footer__schedule-item footer__schedule-item--weekends">
+            <strong>Вихідні:</strong>
+            понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </li>
+        </ul>
+      </div>
+
+      <div
+        id="contacts"
+        class="footer__contacts"
+      >
+        <p class="footer__contacts-title">Контакти:</p>
+
+        <ul class="footer__contacts-content">
+          <li class="footer__contacts-contact">
+            <a
+              href="#"
+              class="footer__contacts-link"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+          </li>
+          <li class="footer__contacts-contact">
+            <a
+              href="#"
+              class="footer__contacts-link"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+          </li>
+          <li class="footer__contacts-contact">
+            <a
+              href="#"
+              class="footer__contacts-link"
+            >
+              факс +38 (044) 278-74-54
+            </a>
+          </li>
+          <li class="footer__contacts-contact">
+            <a
+              href="#"
+              class="footer__contacts-link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer__go-up-button_wrapper">
+        <a
+          href="#"
+          class="footer__go-up-button"
+        ></a>
+      </div>
+
+      <hr class="footer__divider" />
+
+      <ul class="footer__nav-1">
+        <li class="footer__nav-item-1">
+          <a
+            href="#gallery"
+            class="footer__nav-link-1"
+          >
+            Галерея
+          </a>
+        </li>
+        <li class="footer__nav-item-1">
+          <a
+            href="#events"
+            class="footer__nav-link-1"
+          >
+            Виставки та події
+          </a>
+        </li>
+      </ul>
+
+      <ul class="footer__nav-2">
+        <li class="footer__nav-item-2">
+          <a
+            href="#footer"
+            class="footer__nav-link-2"
+          >
+            Про Нас
+          </a>
+        </li>
+        <li class="footer__nav-item-2">
+          <a
+            href="#footer"
+            class="footer__nav-link-2"
+          >
+            Контакти
+          </a>
+        </li>
+      </ul>
+
+      <div class="footer__page-info">
+        <p class="footer__designed-info">Designed by Zhyriada Marina</p>
+        <p class="footer__copyright-info">
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
