input font & hovers

--- a/src/index.html
+++ b/src/index.html
@@ -143,16 +143,21 @@
     >
       <h2>Актуальні події</h2>
       <div class="events__block">
-        <picture class="events__img">
-          <source
-            media="(min-width: 768px)"
-            srcset="/src/images/events_1(768px).png"
-          />
-          <img
-            src="/src/images/events_1.png"
-            alt="event"
-          />
-        </picture>
+        <a
+          href="#form"
+          class="events__img"
+        >
+          <picture>
+            <source
+              media="(min-width: 768px)"
+              srcset="/src/images/events_1(768px).png"
+            />
+            <img
+              src="/src/images/events_1.png"
+              alt="event"
+            />
+          </picture>
+        </a>
         <div class="events__content">
           <div class="events__info">
             <span class="events__type">ВИСТАВКА</span>
@@ -167,16 +172,21 @@
         </div>
       </div>
       <div class="events__block">
-        <picture class="events__img">
-          <source
-            media="(min-width: 768px)"
-            srcset="/src/images/events_2(768px).png"
-          />
-          <img
-            src="/src/images/events_2.png"
-            alt="event"
-          />
-        </picture>
+        <a
+          href="#form"
+          class="events__img"
+        >
+          <picture>
+            <source
+              media="(min-width: 768px)"
+              srcset="/src/images/events_2(768px).png"
+            />
+            <img
+              src="/src/images/events_2.png"
+              alt="event"
+            />
+          </picture>
+        </a>
         <div class="events__content">
           <div class="events__info">
             <span class="events__type">ВИСТАВКА</span>
@@ -217,22 +227,30 @@
       <h2>Галерея</h2>
       <div class="gallery__content">
         <div class="gallery__inner">
-          <img
-            src="/src/images/gallery.png"
-            alt="#"
-          />
-          <img
-            src="/src/images/gallery1.png"
-            alt="#"
-          />
-          <img
-            src="/src/images/gallery2.png"
-            alt="#"
-          />
-          <img
-            src="/src/images/gallery3.png"
-            alt="#"
-          />
+          <a href="#form">
+            <img
+              src="/src/images/gallery.png"
+              alt="#"
+            />
+          </a>
+          <a href="#form">
+            <img
+              src="/src/images/gallery1.png"
+              alt="#"
+            />
+          </a>
+          <a href="#form">
+            <img
+              src="/src/images/gallery2.png"
+              alt="#"
+            />
+          </a>
+          <a href="#form">
+            <img
+              src="/src/images/gallery3.png"
+              alt="#"
+            />
+          </a>
         </div>
       </div>
       <div class="pagination">
