added variables to typography.scss

--- a/index.html
+++ b/index.html
@@ -41,27 +41,27 @@
         ></div>
         <div
           id="dropdown"
-          class="header__dropdown header__dropdown--non-visible"
+          class="dropdown dropdown--non-visible"
         >
           <a
             href="#"
             class="icon icon--dropdown-close"
           ></a>
-          <ul class="header__dropdown-nav">
-            <li class="header__dropdown-nav-link-group">
-              <ul class="header__dropdown-nav-group">
-                <li class="header__dropdown-nav-item">
+          <ul class="dropdown__nav">
+            <li class="dropdown__nav-link-group">
+              <ul class="dropdown__nav-group">
+                <li class="dropdown__nav-item">
                   <a
                     href="#gallery"
-                    class="header__dropdown-nav-link"
+                    class="dropdown__nav-link"
                   >
                     Галерея
                   </a>
                 </li>
-                <li class="header__dropdown-nav-item">
+                <li class="dropdown__nav-item">
                   <a
                     href="#events"
-                    class="header__dropdown-nav-link"
+                    class="dropdown__nav-link"
                   >
                     Виставки та
                     <br />
@@ -70,20 +70,20 @@
                 </li>
               </ul>
             </li>
-            <li class="header__dropdown-nav-link-group">
-              <ul class="header__dropdown-nav-group">
-                <li class="header__dropdown-nav-item">
+            <li class="dropdown__nav-link-group">
+              <ul class="dropdown__nav-group">
+                <li class="dropdown__nav-item">
                   <a
                     href="#footer"
-                    class="header__dropdown-nav-link"
+                    class="dropdown__nav-link"
                   >
                     Про Нас
                   </a>
                 </li>
-                <li class="header__dropdown-nav-item">
+                <li class="dropdown__nav-item">
                   <a
                     href="#contacts"
-                    class="header__dropdown-nav-link"
+                    class="dropdown__nav-link"
                   >
                     Контакти
                   </a>
@@ -91,34 +91,34 @@
               </ul>
             </li>
           </ul>
-          <hr class="header__dropdown-divider" />
-          <section class="header__dropdown-schedule">
-            <p class="header__dropdown-schedule-title">Графік роботи</p>
-            <div class="header__dropdown-schedule-wrapper">
-              <ul class="header__dropdown-schedule-list">
-                <li class="header__dropdown-schedule-item">
+          <hr class="dropdown__divider" />
+          <section class="dropdown__schedule">
+            <p class="dropdown__schedule-title">Графік роботи</p>
+            <div class="dropdown__schedule-wrapper">
+              <ul class="dropdown__schedule-list">
+                <li class="dropdown__schedule-item">
                   <strong>12:00 — 20:00</strong>
                   середа
                 </li>
-                <li class="header__dropdown-schedule-item">
+                <li class="dropdown__schedule-item">
                   <strong>12:00 — 20:00</strong>
                   четвер
                 </li>
-                <li class="header__dropdown-schedule-item">
+                <li class="dropdown__schedule-item">
                   <strong>12:00 — 20:00</strong>
                   п’ятниця
                 </li>
-                <li class="header__dropdown-schedule-item">
+                <li class="dropdown__schedule-item">
                   <strong>11:00 — 19:00</strong>
                   субота
                 </li>
-                <li class="header__dropdown-schedule-item">
+                <li class="dropdown__schedule-item">
                   <strong>11:00 — 19:00</strong>
                   неділя
                 </li>
               </ul>
-              <div class="header__dropdown-schedule-details">
-                <p class="header__dropdown-schedule-weekends">
+              <div class="dropdown__schedule-details">
+                <p class="dropdown__schedule-weekends">
                   <strong>Вихідні:</strong>
                   понеділок, вівторок
                   <br />
